MDEV-37829 Call spider_internal_xa_prepare when XA COMMIT ... ONE PHASE

This allows 1PC XA involving spider tables.